* ISerializer re-factored to generic * Serializer is developed

--- a/Source/Demos/Bosphorus.Serialization.Default.Demo/Bosphorus.Serialization.Default.Demo.csproj
+++ b/Source/Demos/Bosphorus.Serialization.Default.Demo/Bosphorus.Serialization.Default.Demo.csproj
@@ -60,6 +60,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer.cs" />
+    <Compile Include="CustomModel.cs" />
+    <Compile Include="CustomModelXmlSerializer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
