* AssemblyInfo.cs fixed * NuSpec is fixed

--- a/Source/Projects/Bosphorus.Serialization.Core/Bosphorus.Serialization.Core.nuspec
+++ b/Source/Projects/Bosphorus.Serialization.Core/Bosphorus.Serialization.Core.nuspec
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Bosphorus.Serialization.Core</id>
-    <version>1.0.0.2</version>
-    <title>Bosphorus.Serialization.Core</title>
-    <authors>Onur Eker, Oğuz Kurumlu, Gökhan Demir</authors>
-    <owners>Onur Eker, Oğuz Kurumlu, Gökhan Demir</owners>
+    <id>$id$</id>
+    <version>$version$</version>
+    <title>$title$</title>
+    <authors>$author$</authors>
+    <owners>$author$</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Bosphorus Serialization Library</description>
+    <description>$description$</description>
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2014</copyright>
-    <tags>Bosphorus, Serialization, Binary, XML, JSON</tags>
+    <tags>Bosphorus Serialization Core</tags>
   </metadata>
 </package>
