--- a/Source/Projects/Bosphorus.Serialization.Default/Bosphorus.Serialization.Default.nuspec
+++ b/Source/Projects/Bosphorus.Serialization.Default/Bosphorus.Serialization.Default.nuspec
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Bosphorus.Serialization.Default</id>
-    <version>1.0.0.2</version>
-    <title>Bosphorus.Serialization.Default</title>
-    <authors>Onur Eker, Oğuz Kurumlu, Gökhan Demir</authors>
-    <owners>Onur Eker, Oğuz Kurumlu, Gökhan Demir</owners>
+    <id>$id$</id>
+    <version>$version$</version>
+    <title>$title$</title>
+    <authors>$author$</authors>
+    <owners>$author$</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Bosphorus Serialization Default Implementation</description>
-    <releaseNotes>Initial Release</releaseNotes>
+    <description>$description$</description>
+    <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2014</copyright>
-    <tags>Bosphorus, Serialization, Implementation</tags>
+    <tags>Bosphorus Serialization Default</tags>
   </metadata>
 </package>
