--- a/Source/Projects/Bosphorus.Serialization.Core/Bosphorus.Serialization.Core.csproj
+++ b/Source/Projects/Bosphorus.Serialization.Core/Bosphorus.Serialization.Core.csproj
@@ -30,17 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bosphorus.Common.Clr, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Bosphorus.Common.Clr.2.0.1.0\lib\net45\Bosphorus.Common.Clr.dll</HintPath>
+    <Reference Include="Bosphorus.Common.Clr, Version=2.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\bosphorus\Source\packages\Bosphorus.Common.Clr.2.0.5.0\lib\net45\Bosphorus.Common.Clr.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Bosphorus.Container.Castle, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Bosphorus.Container.Castle.2.0.1.0\lib\net45\Bosphorus.Container.Castle.dll</HintPath>
+    <Reference Include="Bosphorus.Container.Castle, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\bosphorus\Source\packages\Bosphorus.Container.Castle.2.0.4.0\lib\net45\Bosphorus.Container.Castle.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
+      <HintPath>..\..\..\..\bosphorus\Source\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -48,6 +48,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -58,6 +60,12 @@
     <Compile Include="BinarySerializer.cs" />
     <Compile Include="IBinarySerializer.cs" />
     <Compile Include="IJsonSerializer.cs" />
+    <Compile Include="ImplementationSelector.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImplementationSelector.Designer.cs">
+      <DependentUpon>ImplementationSelector.cs</DependentUpon>
+    </Compile>
     <Compile Include="Installer.cs" />
     <Compile Include="ISerializer.cs" />
     <Compile Include="IXmlSerializer.cs" />
@@ -69,6 +77,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ImplementationSelector.resx">
+      <DependentUpon>ImplementationSelector.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
