--- a/Source/Demos/Bosphorus.Serialization.Default.Demo/Bosphorus.Serialization.Default.Demo.csproj
+++ b/Source/Demos/Bosphorus.Serialization.Default.Demo/Bosphorus.Serialization.Default.Demo.csproj
@@ -32,17 +32,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bosphorus.BootStapper, Version=2.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Bosphorus.BootStapper.2.0.2.0\lib\net45\Bosphorus.BootStapper.dll</HintPath>
+    <Reference Include="Bosphorus.BootStapper, Version=2.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\bosphorus\Source\packages\Bosphorus.BootStapper.2.0.6.0\lib\net45\Bosphorus.BootStapper.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Bosphorus.Common.Clr, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Bosphorus.Common.Clr.2.0.1.0\lib\net45\Bosphorus.Common.Clr.dll</HintPath>
+    <Reference Include="Bosphorus.Common.Clr, Version=2.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\bosphorus\Source\packages\Bosphorus.Common.Clr.2.0.5.0\lib\net45\Bosphorus.Common.Clr.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Bosphorus.Container.Castle, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Bosphorus.Container.Castle.2.0.1.0\lib\net45\Bosphorus.Container.Castle.dll</HintPath>
+    <Reference Include="Bosphorus.Container.Castle, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\bosphorus\Source\packages\Bosphorus.Container.Castle.2.0.4.0\lib\net45\Bosphorus.Container.Castle.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
