--- a/Source/Demos/Bosphorus.Serialization.Default.Demo/Bosphorus.Serialization.Default.Demo.csproj
+++ b/Source/Demos/Bosphorus.Serialization.Default.Demo/Bosphorus.Serialization.Default.Demo.csproj
@@ -32,26 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bosphorus.BootStapper, Version=2.0.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\bosphorus\Source\packages\Bosphorus.BootStapper.2.0.6.0\lib\net45\Bosphorus.BootStapper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Bosphorus.Common.Clr, Version=2.0.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\bosphorus\Source\packages\Bosphorus.Common.Clr.2.0.5.0\lib\net45\Bosphorus.Common.Clr.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Bosphorus.Container.Castle, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\bosphorus\Source\packages\Bosphorus.Container.Castle.2.0.4.0\lib\net45\Bosphorus.Container.Castle.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -68,6 +48,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\bosphorus.bootstrapper\Source\Projects\Bosphorus.BootStapper\Bosphorus.BootStapper.csproj">
+      <Project>{E964E4A5-A437-41AE-90DB-D2929617D55B}</Project>
+      <Name>Bosphorus.BootStapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\bosphorus.common\Source\Projects\Bosphorus.Common.Clr\Bosphorus.Common.Clr.csproj">
+      <Project>{C4455788-2C4A-447F-AD77-1AB63D8B56C1}</Project>
+      <Name>Bosphorus.Common.Clr</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Projects\Bosphorus.Serialization.Core\Bosphorus.Serialization.Core.csproj">
       <Project>{CB559403-63CD-4945-8E52-14247BC4674B}</Project>
       <Name>Bosphorus.Serialization.Core</Name>
@@ -76,9 +64,6 @@
       <Project>{2aeeb2d7-ad83-467c-942f-a94ea7abe004}</Project>
       <Name>Bosphorus.Serialization.Default</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
