--- a/Source/Demos/Bosphorus.Serialization.Default.Demo/Bosphorus.Serialization.Default.Demo.csproj
+++ b/Source/Demos/Bosphorus.Serialization.Default.Demo/Bosphorus.Serialization.Default.Demo.csproj
@@ -32,6 +32,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\bosphorus\Source\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\bosphorus\Source\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,8 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer.cs" />
-    <Compile Include="CustomModel.cs" />
-    <Compile Include="CustomModelXmlSerializer.cs" />
+    <Compile Include="Installer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -56,6 +63,14 @@
       <Project>{C4455788-2C4A-447F-AD77-1AB63D8B56C1}</Project>
       <Name>Bosphorus.Common.Clr</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\bosphorus.common\Source\Projects\Bosphorus.Common.Core\Bosphorus.Common.Core.csproj">
+      <Project>{6683BC19-B6C9-4686-B8FF-EE4A8596C724}</Project>
+      <Name>Bosphorus.Common.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\bosphorus.container\Source\Projects\Bosphorus.Container.Castle\Bosphorus.Container.Castle.csproj">
+      <Project>{9B8DBFE7-A90C-40D6-B9C1-B6A9528F8317}</Project>
+      <Name>Bosphorus.Container.Castle</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Projects\Bosphorus.Serialization.Core\Bosphorus.Serialization.Core.csproj">
       <Project>{CB559403-63CD-4945-8E52-14247BC4674B}</Project>
       <Name>Bosphorus.Serialization.Core</Name>
@@ -64,6 +79,9 @@
       <Project>{2aeeb2d7-ad83-467c-942f-a94ea7abe004}</Project>
       <Name>Bosphorus.Serialization.Default</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
