--- a/Source/Projects/Bosphorus.Serialization.Core/Bosphorus.Serialization.Core.csproj
+++ b/Source/Projects/Bosphorus.Serialization.Core/Bosphorus.Serialization.Core.csproj
@@ -31,12 +31,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\bosphorus\Source\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <HintPath>..\..\..\..\bosphorus\Source\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
+      <HintPath>..\..\..\..\bosphorus\Source\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,9 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinarySerializer.cs" />
-    <Compile Include="IBinarySerializer.cs" />
-    <Compile Include="IJsonSerializer.cs" />
+    <Compile Include="Serializer.Binary\GenericBinarySerializer.cs" />
+    <Compile Include="Serializer.Binary\IBinarySerializer.cs" />
+    <Compile Include="Serializer.Json\IJsonSerializer.cs" />
     <Compile Include="ImplementationSelector.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,16 +59,13 @@
       <DependentUpon>ImplementationSelector.cs</DependentUpon>
     </Compile>
     <Compile Include="Installer.cs" />
-    <Compile Include="ISerializer.cs" />
-    <Compile Include="IXmlSerializer.cs" />
-    <Compile Include="JsonSerializer.cs" />
+    <Compile Include="Serializer\ISerializer.cs" />
+    <Compile Include="Serializer.Xml\IXmlSerializer.cs" />
+    <Compile Include="Serializer.Json\GenericJsonSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AbstractSerializer.cs" />
-    <Compile Include="Serializer.cs" />
-    <Compile Include="XmlSerializer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="Serializer\AbstractGenericSerializer.cs" />
+    <Compile Include="Serializer\GenericSerializer.cs" />
+    <Compile Include="Serializer.Xml\GenericXmlSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ImplementationSelector.resx">
@@ -84,6 +81,10 @@
       <Project>{9B8DBFE7-A90C-40D6-B9C1-B6A9528F8317}</Project>
       <Name>Bosphorus.Container.Castle</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
