--- a/Source/Demos/Bosphorus.Serialization.Default.Demo/Bosphorus.Serialization.Default.Demo.csproj
+++ b/Source/Demos/Bosphorus.Serialization.Default.Demo/Bosphorus.Serialization.Default.Demo.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Bosphorus.Serialization.Default.Demo</RootNamespace>
     <AssemblyName>Bosphorus.Serialization.Default.Demo</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,12 +33,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bosphorus.Assemble.BootStrapper, Version=2.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Bosphorus.Assemble.BootStrapper.2.0.7.0\lib\net461\Bosphorus.Assemble.BootStrapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Bosphorus.Common.Api, Version=2.0.12.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Bosphorus.Common.Api.2.0.12.0\lib\net461\Bosphorus.Common.Api.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Bosphorus.Common.Application, Version=2.0.12.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Bosphorus.Common.Application.2.0.12.0\lib\net461\Bosphorus.Common.Application.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\bosphorus\Source\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
+      <HintPath>..\..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\bosphorus\Source\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
+      <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -54,27 +67,12 @@
     <Compile Include="GenericBinarySerializerDemo.cs" />
     <Compile Include="GenericJsonSerializerDemo.cs" />
     <Compile Include="GenericXmlSerializerDemo.cs" />
+    <Compile Include="IDemoInstaller.cs" />
     <Compile Include="Installer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\bosphorus.bootstrapper\Source\Projects\Bosphorus.BootStapper\Bosphorus.BootStapper.csproj">
-      <Project>{E964E4A5-A437-41AE-90DB-D2929617D55B}</Project>
-      <Name>Bosphorus.BootStapper</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\bosphorus.common\Source\Projects\Bosphorus.Common.Clr\Bosphorus.Common.Clr.csproj">
-      <Project>{C4455788-2C4A-447F-AD77-1AB63D8B56C1}</Project>
-      <Name>Bosphorus.Common.Clr</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\bosphorus.common\Source\Projects\Bosphorus.Common.Core\Bosphorus.Common.Core.csproj">
-      <Project>{6683BC19-B6C9-4686-B8FF-EE4A8596C724}</Project>
-      <Name>Bosphorus.Common.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\bosphorus.container\Source\Projects\Bosphorus.Container.Castle\Bosphorus.Container.Castle.csproj">
-      <Project>{9B8DBFE7-A90C-40D6-B9C1-B6A9528F8317}</Project>
-      <Name>Bosphorus.Container.Castle</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Projects\Bosphorus.Serialization.Core\Bosphorus.Serialization.Core.csproj">
       <Project>{CB559403-63CD-4945-8E52-14247BC4674B}</Project>
       <Name>Bosphorus.Serialization.Core</Name>
@@ -83,12 +81,9 @@
       <Project>{2aeeb2d7-ad83-467c-942f-a94ea7abe004}</Project>
       <Name>Bosphorus.Serialization.Default</Name>
     </ProjectReference>
-    <ProjectReference Include="A:\Bosphorus\bosphorus.assemble\Source\Projects\Bosphorus.Demo.Runner\Bosphorus.Demo.Runner.csproj">
-      <Project>{38F86C1E-ABAA-42AC-ADB3-4F6579110DBF}</Project>
-      <Name>Bosphorus.Demo.Runner</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
