--- a/Source/Demos/Bosphorus.Serialization.Default.Demo/packages.config
+++ b/Source/Demos/Bosphorus.Serialization.Default.Demo/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.0" targetFramework="net45" />
-  <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
+  <package id="Bosphorus.Assemble.BootStrapper" version="2.0.7.0" targetFramework="net461" />
+  <package id="Bosphorus.Common.Api" version="2.0.12.0" targetFramework="net461" />
+  <package id="Bosphorus.Common.Application" version="2.0.12.0" targetFramework="net461" />
+  <package id="Castle.Core" version="3.3.0" targetFramework="net461" />
+  <package id="Castle.Windsor" version="3.3.0" targetFramework="net461" />
 </packages>
