Compression Decorator & Sharp Serializer

--- a/Source/Projects/Bosphorus.Serialization.Core/Bosphorus.Serialization.Core.csproj
+++ b/Source/Projects/Bosphorus.Serialization.Core/Bosphorus.Serialization.Core.csproj
@@ -54,6 +54,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Serializer.Binary\Decoration.Compress\DeserializerDecompressionDecorator.cs" />
+    <Compile Include="Serializer.Binary\Decoration.Compress\SerializerCompressionDecorator.cs" />
     <Compile Include="Serializer.Binary\GenericBinarySerializer.cs" />
     <Compile Include="Serializer.Binary\IBinarySerializer.cs" />
     <Compile Include="Serializer.Binary\IBinaryDeserializer.cs" />
